--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -50,6 +50,8 @@
     .img-container {
       display: flex;
       justify-content: center;
+      align-items: center;
+
       img {
         width: 40%;
 
